--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -230,7 +230,7 @@
                                                                 <th>paymentmethod</th>
                                                                 <th>Total</th>
                                                                 <th>Actions</th>
-                                                                <th>Cancel/Return</th>
+
                                                             </tr>
                                                         </thead>
                                                         <tbody>
@@ -240,17 +240,18 @@
                                                                     <tr>
                                                                         <td><%= index+1 %></td>
                                                                         <td><%= order.date %></td>
-                                                                        <td><%= order.deliveryStatus %></td>
+                                                                        <%if(order.deliveryStatus == "delivered"){ %>
+                                                                            <td class="text-success"><%= order.deliveryStatus %></td>
+                                                                        <% }else if(order.deliveryStatus == "returned" || order.deliveryStatus == "cancelled"){ %>
+                                                                            <td class="text-danger"><%= order.deliveryStatus %></td>
+                                                                        <% }else{ %>
+                                                                            <td><%= order.deliveryStatus %></td>
+                                                                        <% } %>
                                                                         <td><%= order.paymentMethod %></td>
                                                                         <td><%=order.orderValue %></td>
                                                                         <td><a href="/gadgetly/orderdetails/?orderId=<%= order._id %>" style="background-color: rgb(15, 163, 22) ; color: white;" class="btn btn-small  d-block">View</a>
                                                                         <br>
                                                                         <a href="/gadgetly/orderDowloadPdf/?orderId=<%= order._id %>"  style="background-color: rgb(219, 55, 18) ; color: white;" class="btn btn-small d-block">Dowload receipt</a></td>
-                                                                        <% if(order.deliveryStatus === "delivered"){ %>
-                                                                         <td><a href="#"  style="background-color: rgb(219, 18, 18) ; color: white;" class="btn btn-small d-block">Return</a></td>
-                                                                        <% }else{ %>
-                                                                         <td><a href="/gadgetly/cancelorder/?orderId=<%= order._id %>"  style="background-color: rgb(18, 175, 219) ; color: white;" class="btn btn-small d-block">Cancel</a></td>
-                                                                        <% } %>
                                                                     </tr>
                                                             <%    })
                                                             }else{ %>
@@ -345,7 +346,6 @@
                                                 <h5>Account Details</h5>
                                             </div>
                                             <div class="card-body">
-                                                <p>Already have an account? <a href="page-login-register.html">Log in instead!</a></p>
                                                 <% if(user){ %>
                                                 <form method="post" action="/gadgetly/editProfile/?id=<%=user._id %>" id="editProfileForm"
                                                     >
