--- a/views/admin/userorders.ejs
+++ b/views/admin/userorders.ejs
@@ -21,17 +21,21 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-md-2 col-6">
+                    <!-- <div class="col-md-2 col-6">
                         <input type="date" value="02.05.2021" class="form-control">
-                    </div>
+                    </div> -->
                     <div class="col-md-2 col-6">
                         <div class="custom_select">
-                            <select class="form-select select-nice">
+                            <select class="form-select select-nice"  onchange="filter(this)"  >
                                 <option selected>Status</option>
-                                <option>All</option>
-                                <option>Paid</option>
-                                <option>Chargeback</option>
-                                <option>Refund</option>
+                                <option value="delivered">Delivered</option>
+                                <option value="returned">Returned</option>
+                                <option value="cancelled">Cancelled</option>
+                                <option value="requested">Requested</option>
+                                <option value="placed">Placed</option>
+                                <option value="Wallet">Wallet</option>
+                                <option value="Cash On Delivery">COD</option>
+                                <option value="Online Payment">Online Payment</option>
                             </select>
                         </div>
                     </div>
@@ -129,14 +133,21 @@
                     <% for(i=1; i<=totalPages; i++){ %>
                         <li class="page-item"><a class="page-link" href="?page=<%= i %>"><%= i %></a></li> 
                     <% } %> 
-                    <!-- <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                    <li class="page-item"><a class="page-link" href="#">02</a></li>
-                    <li class="page-item"><a class="page-link" href="#">03</a></li>
-                    <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                    <li class="page-item"><a class="page-link" href="#">16</a></li>
-                    <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li> -->
                 </ul>
             </nav>
         </div>
     </section> <!-- content-main end// -->
+    <script>
+        function filter(selectedElement){
+            let filter = selectedElement.value;
+            if(filter == 'pending' || 'delivered' || 'cancelled' || 'returned'){
+                window.location.href=`/gadgetly/admin/userorders/?deliveryStatus=${filter}`
+            }else if(filter == 'requested'){
+                window.location.href = `/gadgetly/admin/useroders/?cancellationStatus=${filter}`
+            }else{
+                window.location.href = `/gadgetly/admin/userorders/?paymentMethod=${filter}`
+            }
+            
+        }
+    </script>
     <%-include('../layout/adminfooter') %>
