--- a/views/layout/adminfooter.ejs
+++ b/views/layout/adminfooter.ejs
@@ -24,6 +24,11 @@
 <script src="/admin-assets/js/custom-chart.js" type="text/javascript"></script>
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/6bc73d1aec.js" crossorigin="anonymous"></script>
+
+<!-- script for Datatable -->
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
+  
+<script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
 </body>
 
 
