--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -34,13 +34,13 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item ">
-                    <a class="menu-link" href="/gadgetly/admin/home"> <i class="icon material-icons md-home"></i>
+                <li class="menu-item active">
+                    <a class="menu-link " href="/gadgetly/admin/home"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
-                <li class="menu-item ">
-                    <a class="menu-link" href="/gadgetly/admin/productList"> <i class="icon material-icons md-shopping_bag"></i>
+                <li class="menu-item active">
+                    <a class="menu-link " href="/gadgetly/admin/productList"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Products</span>
                     </a>
                 </li>
@@ -54,13 +54,13 @@
                         <a href="page-orders-detail.html">Order detail</a>
                     </div>
                 </li> -->
-                <li class="menu-item">
+                <li class="menu-item active">
                     <a class="menu-link" href="/gadgetly/admin/categories"> <i class="icon material-icons md-store"></i>
                         <span class="text">Categories</span>
                     </a>
                 </li>
                 
-                <li class="menu-item">
+                <li class="menu-item active">
                     <a class="menu-link" href="/gadgetly/admin/loadAddProduct"> <i class="icon material-icons md-add_box"></i>
                         <span class="text">Add product</span>
                     </a>
@@ -74,19 +74,24 @@
                         <a href="page-transactions-2.html">Transaction 2</a>
                     </div>
                 </li> -->
-                <li class="menu-item">
+                <li class="menu-item active">
                     <a class="menu-link" href="/gadgetly/admin/userlist"> <i class="icon material-icons md-person"></i>
                         <span class="text">Users</span>
                     </a>
                 </li>
-                <li class="menu-item ">
+                <li class="menu-item active">
                     <a class="menu-link" href="/gadgetly/admin/userorders"> <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">UserOrders</span>
                     </a>
                 </li>
-                <li class="menu-item ">
+                <li class="menu-item active">
                     <a class="menu-link" href="/gadgetly/admin/salesreport"> <i class="icon material-icons md-pie_chart"></i>
                         <span class="text">Salesreport</span>
+                    </a>
+                </li>
+                <li class="menu-item active">
+                    <a class="menu-link" href="/gadgetly/admin/coupons"> <i class="icon material-icons md-local_offer"></i>
+                        <span class="text">Coupuns</span>
                     </a>
                 </li>
                 <!-- <li class="menu-item">
