--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -17,8 +17,13 @@
     <link rel="shortcut icon" type="image/x-icon" href="/admin-assets/imgs/theme/favicon.svg">
     <!-- Template CSS -->
     <link href="/admin-assets/css/main.css" rel="stylesheet" type="text/css" />
-    <!-- cropperjs -->
-    <script src="https://unpkg.com/cropperjs/dist/cropper.min.js"></script>
+    <!-- script for Datatable -->
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
+ 
+    <script src="https://cdn.datatables.net/1.10.8/js/jquery.dataTables.min.js" defer="defer"></script>
+   
 </head>
 
 <body>
