--- a/views/admin/inactivecouponlist.ejs
+++ b/views/admin/inactivecouponlist.ejs
@@ -14,7 +14,7 @@
     <div class="card-body">
         <div class="table-responsive">
             <div class="table-responsive">
-              <table class="table table-bordered align-middle table-nowrap mb-0" >
+              <table class="table table-bordered align-middle table-nowrap mb-0 " id="myTable" >
                 <thead class="table-light">
                     <tr>
                         <th class="align-middle" scope="col">CouponCode</th>
@@ -50,4 +50,9 @@
     </div>
 </div>
 </section>
+<script>
+    $(document).ready(function() {
+      $('#myTable').DataTable();
+  });
+</script>
 <%-include('../layout/adminfooter') %>
