--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -42,36 +42,22 @@
     <div class="card-body">
         <div class="table-responsive">
             <div class="table-responsive">
-                <table class="table align-middle table-nowrap mb-0">
+                <table class="table align-middle table-nowrap mb-0" >
                     <thead class="table-light">
                         <tr>
-                            <!-- <th scope="col" class="text-center">
-                                <div class="form-check align-middle">
-                                    <input class="form-check-input" type="checkbox" id="transactionCheck01">
-                                    <label class="form-check-label" for="transactionCheck01"></label>
-                                </div>
-                            </th> -->
                             <th class="align-middle" scope="col">Order ID</th>
                             <th class="align-middle" scope="col">Billing Name</th>
                             <th class="align-middle" scope="col">Date</th>
                             <th class="align-middle" scope="col">Total</th>
                             <th class="align-middle" scope="col">Payment Status</th>
                             <th class="align-middle" scope="col">Payment Method</th>
-                            <!-- <th class="align-middle" scope="col">OrderStatus</th>
-                            <th class="align-middle" scope="col">View Details</th> -->
                         </tr>
                     </thead>
                     <tbody>
                       <% if(typeof salesData != "undefined" && salesData.length>0){
                         salesData.forEach((order,index)=>{  %>
                           <tr>
-                            <!-- <td class="text-center">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="transactionCheck02">
-                                    <label class="form-check-label" for="transactionCheck02"></label>
-                                </div>
-                            </td> -->
-                            <td><a href="#" class="fw-bold"><%= index+1 %></a> </td>
+                            <td><a href="#" class="fw-bold"><%= order._id %></a> </td>
                             <td><%= order.userId.name %></td>
                             <td>
                                 <%= order.date %>
@@ -83,16 +69,8 @@
                                 <span class="badge badge-pill badge-soft-success"><%= order.orderStatus %></span>
                             </td>
                             <td>
-                              <!-- card icon in cod  doesn't need-->
-                                <!-- <i class="material-icons md-payment font-xxl text-muted mr-5"></i>  -->
                                 <%= order.paymentMethod %>
                             </td>
-                            <!-- <td>
-                                <a href="/gadgetly/admin/deliver/?orderId=<%=order._id %>" class="btn btn-xs"> Deliver</a>
-                            </td>
-                            <td>
-                                <a href="#" class="btn btn-xs"> View details</a>
-                            </td> -->
                         </tr>
                        <%})
                       } else{ %>
