--- a/views/admin/usersList.ejs
+++ b/views/admin/usersList.ejs
@@ -4,14 +4,14 @@
   <div class="content-header">
       <div>
           <h2 class="content-title card-title">Users List </h2>
-          <p>Admin can edit ,block and unblock users in here</p>
+          <p>Admin can block and unblock users in here</p>
       </div>
-      <div>
+      <!-- <div>
           <input type="text" placeholder="Search order ID" class="form-control bg-white">
-      </div>
+      </div> -->
   </div>
   <div class="card mb-4">
-      <header class="card-header">
+      <!-- <header class="card-header">
           <div class="row gx-3">
               <div class="col-lg-4 col-md-6 me-auto">
                   <input type="text" placeholder="Search..." class="form-control">
@@ -32,10 +32,10 @@
                   </select>
               </div>
           </div>
-      </header> <!-- card-header end// -->
+      </header> card-header end// -->
       <div class="card-body">
           <div class="table-responsive">
-              <table class="table table-hover">
+              <table class="table table-hover" id="myTable">
                   <thead>
                       <tr>
                           <th scope="col">Name</th>
@@ -101,20 +101,12 @@
           </div> <!-- table-responsive //end -->
       </div> <!-- card-body end// -->
   </div> <!-- card end// -->
-  <div class="pagination-area mt-15 mb-50">
-      <nav aria-label="Page navigation example">
-          <ul class="pagination justify-content-start">
-            <% for(i=1; i<=totalPages; i++){ %>
-                <li class="page-item"><a class="page-link" href="?page=<%= i %>&search=<%=searchTerm%>"><%= i %></a></li> 
-            <% } %>
-              <!-- <li class="page-item active"><a class="page-link" href="#">01</a></li>
-              <li class="page-item"><a class="page-link" href="#">02</a></li>
-              <li class="page-item"><a class="page-link" href="#">03</a></li>
-              <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-              <li class="page-item"><a class="page-link" href="#">16</a></li>
-              <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li> -->
-          </ul>
-      </nav>
-  </div>
+
 </section> <!-- content-main end// -->
+<script>
+    $(document).ready(function() {
+      $('#myTable').DataTable();
+  });
+</script>
+
 <%-include('../layout/adminfooter') %>
