--- a/views/admin/productList.ejs
+++ b/views/admin/productList.ejs
@@ -41,66 +41,73 @@
                     </div>
                 </header> <!-- card-header end// -->
                 <div class="card-body">
-                        
-                            <!-- <div class="col col-check flex-grow-0">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox">
-                                </div>
-                            </div> -->
-                         <% if(typeof product != "undefined"){
-                            for(let i=0; i<product.length; i++){ %>
-                                <article class="itemlist">
-                                    <div class="row align-items-center">
-                                        <div class="col-lg-4 col-sm-4 col-8 flex-grow-1 col-name">
-                                            <a class="itemside" href="#">
-                                                <div class="left">
-                                                    <img src="/admin-assets/imgs/productImages/<%= product[i].image[0] %>" class="img-sm img-thumbnail" alt="Item">
-                                                </div>
-                                                <div class="info">
-                                                    <h6 class="mb-0"><%= product[i].productName %></h6>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="col-lg-2 col-sm-2 col-4 col-price"> <span><%= product[i].productPrice %></span> </div>
-                                        <div class="col-lg-2 col-sm-2 col-4 col-status">
-                                            <span class="badge rounded-pill alert-success">Active</span>
-                                        </div>
-                                        <div class="col-lg-1 col-sm-2 col-4 col-date">
-                                            <span><%= product[i].Stock %></span>
-                                        </div>
-                                        <div class="col-lg-2 col-sm-2 col-4 col-action text-end">
-                                            <a href="/gadgetly/admin/edit?id=<%=product[i]._id %>" class="btn btn-sm font-sm rounded btn-brand">
-                                                <i class="material-icons md-edit"></i> Edit
-                                            </a>
-                                            <%if(product[i].is_listed ==0 ){ %>
-                                                <a href="/gadgetly/admin/list?id=<%=product[i]._id %>" class="btn btn-sm font-sm btn-light rounded  list-btn"  productId="<%=product[i]._id %>" style="background-color: green;">
-                                                    <i class="material-icons md-delete_forever"></i> List
+                            <div class="table-responsive">
+                                <table class="table table-striped align-middle table-nowrap mb-0 table-hover" id="myTable">
+                                    <thead class="table-light">
+                                        <tr>
+                                            <th class="align-middle" scope="col">Image</th>
+                                            <th class="align-middle" scope="col">Name</th>
+                                            <th class="align-middle" scope="col">Price</th>
+                                            <th class="align-middle" scope="col">discount%</th>
+                                            <th class="align-middle" scope="col">OfferPrice</th>
+                                            <th class="align-middle" scope="col">Edit</th>
+                                            <th class="align-middle" scope="col">Stock</th>
+                                            <th class="align-middle" scope="col">List/unList</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                      <% if(typeof product != "undefined" && product.length>0){
+                                        product.forEach((product,index)=>{  %>
+                                          <tr>
+                                            <td><img src="/admin-assets/imgs/productImages/<%= product.image[0] %>" class="img-sm img-thumbnail" style="width: 50px; height: 50px;border-radius: 50%;" alt="Item"> </td>
+                                            <td><%= product.productName %></td>
+                                            <td>
+                                                <%= product.productPrice %>
+                                            </td>
+                                            <td>
+                                                <%= product.productDiscount %>
+                                            </td>
+                                            <td>
+                                                <%= product.salePrice %>
+                                            </td>
+                                            <td>
+                                                <a href="/gadgetly/admin/edit?id=<%=product._id %>" class="btn btn-sm font-sm rounded btn-brand">
+                                                    <i class="material-icons md-edit"></i> Edit
                                                 </a>
-                                            <% }else{ %>
-                                                <a href="/gadgetly/admin/unlist?id=<%=product[i]._id %>"  class="btn btn-sm font-sm btn-light rounded unlist-btn" productId="<%=product[i]._id %>"  style="background-color: red;">
-                                                    <i class="material-icons md-delete_forever"></i> Unlist
-                                                </a>
-                                           <% } %>
+                                            </td>
+
+                                            <td>
+                                               <%= product.Stock %>
+                                            </td>
+
+                                            <td>
+                                                <%if(product.is_listed ==0 ){ %>
+                                                    <a href="/gadgetly/admin/list?id=<%=product._id %>" class="btn btn-sm font-sm btn-light rounded  list-btn"  productId="<%=product._id %>" style="background-color: green;">
+                                                        <i class="material-icons md-delete_forever"></i> List
+                                                    </a>
+                                                <% }else{ %>
+                                                    <a href="/gadgetly/admin/unlist?id=<%=product._id %>"  class="btn btn-sm font-sm btn-light rounded unlist-btn" productId="<%=product._id %>"  style="background-color: red;">
+                                                        <i class="material-icons md-delete_forever"></i> Unlist
+                                                    </a>
+                                               <% } %>
+                                            </td>
+
                                             
-                                        </div>
-                                    </div>
-                                </article>                                            
-                               <% }
-
-                            }else{
-                                
-                            } %>
-
+                                        </tr>
+                                       <%})
+                                      } else{ %>
+                                      <% } %>
+        
+                                    </tbody>
+                                </table>
+                            </div>
                 </div> <!-- card-body end// -->
             </div> <!-- card end// -->
-            <div class="pagination-area mt-30 mb-50">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-start">
-                        <% for(i=1; i<=totalPages; i++){ %>
-                            <li class="page-item"><a class="page-link" href="?page=<%= i %>&search=<%=searchTerm%>"><%= i %></a></li>  
-                        <% } %>
-                    </ul>
-                </nav>
-            </div>
+
         </section> <!-- content-main end// -->
+        <script>
+            $(document).ready(function() {
+              $('#myTable').DataTable();
+          });
+        </script>
         <%-include('../layout/adminfooter') %>
