--- a/views/admin/userorders.ejs
+++ b/views/admin/userorders.ejs
@@ -26,7 +26,7 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <div class="table-responsive">
-                        <table class="table table-bordered align-middle table-nowrap mb-0" id="myTable">
+                        <table class="table table-striped align-middle table-nowrap mb-0 table-hover" id="myTable">
                             <thead class="table-light">
                                 <tr>
                                     <!-- <th scope="col" class="text-center">
@@ -109,7 +109,6 @@
                 </div> <!-- table-responsive end// -->
             </div>
         </div>
- -->
     </section> <!-- content-main end// -->
     <script>
         function filter(selectedElement){
