--- a/views/admin/usersList.ejs
+++ b/views/admin/usersList.ejs
@@ -35,7 +35,7 @@
       </header> card-header end// -->
       <div class="card-body">
           <div class="table-responsive">
-              <table class="table table-hover" id="myTable">
+              <table class="table table-hover table-striped" id="myTable">
                   <thead>
                       <tr>
                           <th scope="col">Name</th>
