address checked in placeorder &wishlist dlt when addtocart &wallet rchrge +ve only& new address default

--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -420,7 +420,13 @@
                         title:'INSUFFICIENT BALANCE',
                         text:'Please recharge your wallet and try again!'
                     })
-                }
+            }if(data.noaddress){
+                swal.fire({
+                    icon:'error',
+                    title:'Address Not Found',
+                    text:'please add address to place order'
+                })
+            }
                 if(data.order){
 
                     var options = {
