--- a/views/user/userwallet.ejs
+++ b/views/user/userwallet.ejs
@@ -59,29 +59,6 @@
                 </table>
             </div>
             <hr>
-        
-            <!-- Debits Table -->
-            <!-- <div class="mb-4">
-              <h4 class="text-center text-danger">Debits</h4>
-              <table class="table table-bordered">
-                  <thead>
-                      <tr>
-                          <th>Date</th>
-                          <th>Order Value</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <% if(typeof Debits != "undefined" && Debits.length > 0 ){
-                          Debits.forEach((debit)=>{ %>
-                              <tr>
-                                  <td><%= new Date(debit.date).toLocaleString('en-IN', { timeZone: 'Asia/Kolkata' }) %></td>
-                                  <td><%= debit.orderValue %></td>
-                              </tr>
-                          <% });
-                      } %>
-                  </tbody>
-              </table>
-          </div> -->
         </div>
         
           
@@ -94,57 +71,63 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script>
-  document.querySelector('.btn.btn-primary').addEventListener('click', function(event) {
-      event.preventDefault();
-      console.log("arrived at button click add wallet")
-
-      Swal.fire({
-          title: 'Recharge Wallet',
-          html: '<i class="fa fa-inr"></i> <input id="recharge-amount" class="swal2-input" placeholder="Enter recharge amount">',
-          focusConfirm: false,
-          preConfirm: () => {
-              return document.getElementById('recharge-amount').value;
-          }
-      }).then(result => {
-          if (result.isConfirmed) {
-              Swal.fire(
-                  'Wallet Recharged!',
-                  'Your wallet has been recharged with ' + result.value + ' amount.',
-                  'success'
-              );
-
-              fetch('/gadgetly/add-money', {
-                  method: 'POST',
-                  headers: {
-                      'Content-Type': 'application/json'
-                  },
-                  body: JSON.stringify({
-                      rechargeAmount: result.value
-                  })
-              })
-              .then(response => {
-                  if (response.ok) {
-                      return response.json();
-                  }
-                  throw new Error('Network response was not ok.');
-              })
-              .then(data => {
-                  const walletBalance = data.updated.balance;
-                  const balance =  document.getElementById('balance');
-                  balance.textContent = walletBalance
-              })
-              .catch(error => {
-                  console.error('Error', error);
-                  // Handle errors or display a message to the user
-              });
-          }
-      })
-      .catch(error => {
-          console.error('Error', error);
-          // Handle errors or display a message to the user
-      });
-  });
-</script>
+    document.querySelector('.btn.btn-primary').addEventListener('click', function(event) {
+        event.preventDefault();
+        console.log("arrived at button click add wallet")
+  
+        Swal.fire({
+            title: 'Recharge Wallet',
+            html: '<i class="fa fa-inr"></i> <input id="recharge-amount" class="swal2-input" placeholder="Enter recharge amount">',
+            focusConfirm: false,
+            preConfirm: () => {
+                const inputValue = document.getElementById('recharge-amount').value;
+                if (isNaN(inputValue) || parseFloat(inputValue) <= 0) {
+                    Swal.showValidationMessage('Please enter a valid positive number.');
+                } else {
+                    return inputValue;
+                }
+            }
+        }).then(result => {
+            if (result.isConfirmed) {
+                Swal.fire(
+                    'Wallet Recharged!',
+                    'Your wallet has been recharged with ' + result.value + ' amount.',
+                    'success'
+                );
+  
+                fetch('/gadgetly/add-money', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        rechargeAmount: result.value
+                    })
+                })
+                .then(response => {
+                    if (response.ok) {
+                        return response.json();
+                    }
+                    throw new Error('Network response was not ok.');
+                })
+                .then(data => {
+                    const walletBalance = data.updated.balance;
+                    const balance =  document.getElementById('balance');
+                    balance.textContent = walletBalance
+                })
+                .catch(error => {
+                    console.error('Error', error);
+                    // Handle errors or display a message to the user
+                });
+            }
+        })
+        .catch(error => {
+            console.error('Error', error);
+            // Handle errors or display a message to the user
+        });
+    });
+  </script>
+  
 <script>
     $(document).ready(function() {
       $('#myTable').DataTable();
