--- a/views/user/addaddress.ejs
+++ b/views/user/addaddress.ejs
@@ -181,7 +181,7 @@
                               </div>
                               <div class="card-body">
                                   <% if(user){ %>
-                                  <form method="post" action="/gadgetly/addaddress" id="addressForm">
+                                  <form method="post" action="/gadgetly/addaddress/?checkout=<%=checkout%>" id="addressForm">
                                       <div class="row">
                                           <div class="form-group col-md-12">
                                               <label>AddressName <span class="required">*</span></label>
